--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /Generics/.vs/Generics/v16/Server/sqlite3/db.lock
+/Generics/.vs/Generics/v16/Server/sqlite3/storage.ide
+/Generics/.vs/Generics/v16/Server/sqlite3/storage.ide-shm
+/Generics/.vs/Generics/v16/Server/sqlite3/storage.ide-wal
+/Generics/.vs/Generics/v16/.suo
